--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,11 @@
   <body>
     <nav>
 <ul>
-<li><a href="/">Home</a></li>
-<li><a href="/about">About</a></li>
+<li><a href="/">HOME</a></li>
+<li><a href="/research">RESEARCH</a></li>
+<li><a href="/publications">PUBLICATIONS</a></li>
 <li><a href="/cv">CV</a></li>
-<li><a href="/blog">Blog</a></li>
+<li><a href="/contact">CONTACT</a></li>
 </ul>
     </nav>
 <div class="container">
@@ -25,8 +26,8 @@
   
   <footer>
    <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   <li><a href="mailto:kiemute@uwaterloo.ca">email</a></li>
+   <li><a href="https://github.com/kiemute">github.com/kiemute</a></li>
    </ul>
   </footer>
   </body>
