--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 <li><a href="/">HOME</a></li>
 <li><a href="/research">RESEARCH</a></li>
 <li><a href="/publications">PUBLICATIONS</a></li>
+<li><a href="/awards">AWARDS</a></li>
 <li><a href="/cv">CV</a></li>
 <li><a href="/contact">CONTACT</a></li>
 </ul>
